--- a/Zelenogorsk_(Krasnojarskan_rand).mw
+++ b/Zelenogorsk_(Krasnojarskan_rand).mw
@@ -9,7 +9,7 @@
  | Voz' = 2017
  | Pind = 162
  | Fail = Зеленогорск.jpg
- | Pämez' = Pavel Korčaškin<br />(sügüz'ku 2014—)
+ | Pämez' = Mihail Speranskii<br />(tal'vku 2018—)
  | Telefonkod = +7-39169-xx-xxx
  | Avtokod = 24. 84. 88. 124
  | Aigvö = [[UTC]]+7 (MSK+4)
@@ -31,6 +31,8 @@ Zelenogorsk om lidnümbrikon üks'jäine eländpunkt. Lidnan pertišton pind —
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 66 056 ristitud. Kaikiš suremb ristitišt oli enamba 69 tuhad eläjid vll 2001−2006 (69 500 rist. vl 2001). [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Serafim Sarovalaižen päjumalanpert' om saudud lidnas vll 1996−2004.
 
 Krasnojarskan elektromehanine tehnikum i Zelenogorskan tegimištoližtehnologijoiden da servisan tehnikum oma professionaližen opendusen aluzkundoikš.
+
+Enzne lidnan pämez' om Pavel Korčaškin (sügüz'ku 2014—).
 
 == Galerei ==
 <gallery mode="packed" heights="125px">
