--- a/Sosnovoborsk_(Krasnojarskan_rand).mw
+++ b/Sosnovoborsk_(Krasnojarskan_rand).mw
@@ -1,26 +1,27 @@
 {{Eländpunkt
  | Nimi = Sosnovoborsk<br />Сосновоборск
- | Lidnanznam = Coat of Arms of Sosnovoborsk (Krasnoyarsk krai).png
- | Flag = 
+ | Lidnanznam = Sosnovoborsk COA (2019).jpg
+ | Flag = Flag of Sosnovoborsk (Krasnoyarsk Krai).png
  | Lidnanznam text = Sosnovoborskan lidnanznam (Krasnojarskan rand)
- | Flag text = 
+ | Flag text = Sosnovoborskan flag (Krasnojarskan rand)
  | Valdkund = Venäma
- | Eläjiden lugu = 39,375
- | Voz' = 2017
+ | Eläjiden lugu = 41,080
+ | Voz' = 2021
  | Pind = 26.64
  | Fail = Sosnovoborsk.jpg
- | Pämez' = Sergei Ponomaröv<br />(2005—)
+ | Pämez' = Aleksei Kudrävcev<br />(sulaku 2020—)
  | Telefonkod = +7-39131-xx-xxx
  | Avtokod = 24. 84. 88. 124
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
 }}
 {{Znamoičendad|Sosnovoborsk}}
+[[Fail:Sosnovoborsk street.JPG|thumb|left|250px|Leninskii Komsomolan ird vl 2008]]
 '''Sosnovoborsk''' ({{lang-ru|Сосновоборск}}) om [[Venäma]]n lidn da lidnümbrik [[Krasnojarskan rand]]an suvipalan keskuses, [[Krasnojarsk]]an pohjoižpäivnouzmaine ezilidn.
 
 == Istorii ==
 Eländpunktan aluz om pandud vl 1971 žiloks sauvomha avto- da traktorližavedamiden tegint (ei ole rados), oli alištunu Krasnojarskan tobmudele ezmässai. Vl 1985 sai lidnan statusad. Torguindvilugoitmižmašiništon «Aisberg»-tegim, plastikpakuitesen tegim i viluštampuidud tegesiden edheotand ratas Sosnovoborskas.
 
-Lidn šingotase Krasnojarskan magaduzrajonaks.
+Sosnovoborsk-lidn šingotase Krasnojarskan magaduzrajonaks.
 
 == Geografijan andmused ==
 Lidn sijadase [[Jenisei]]-jogen oiktal randal, 160 m ü.m.t. keskmäižel korktusel. Om ümbärtud kanghil. Matkad [[Krasnojarsk]]hasai om 20 km suvipäivlaskmha orhal vai avtotedme. Toine lähembaine lidn om [[Železnogorsk (Krasnojarskan rand)|Železnogorsk]] 15 km pohjoižpäivnouzmha raudtel vai avtotel.
@@ -28,13 +29,20 @@ Lidn sijadase [[Jenisei]]-jogen oiktal randal, 160 m ü.m.t. keskmäižel korktu
 Sosnovoborsk om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 33 091 ristitud. Kaikiš suremb ristitišt om nügüd'. [[Hristanuskond]]an kaks' pühäpertid om olmas lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 33 091 ristitud. Kaikiš suremb ristitišt om nügüd'.
 
-Sosnovoborskan politehnine kolledž i mehaniž-tehnologine tehnikum oma professionaližen opendusen aluzkundoikš.
+[[Hristanuskond]]an kaks' pühäpertid om olmas lidnas.
+
+Sosnovoborskan mehaniž-tehnologine tehnikum<ref>[ Sosnovoborskan mehaniž-tehnologižen tehnikuman sait ('''').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+
+Edeline lidnan pämez' om Sergei Ponomaröv (2005 — uhoku 2020).
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://sosnovoborsk-city.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''sosnovoborsk-city.ru'').] {{ref-ru}}
-{{Commons|Category:Sosnovoborsk}}
+{{Commons|Category:Sosnovoborsk (Krasnoyarsk Krai)}}
 
 {{Krasnojarskan randan lidnad}}
 
