*Empty MediaWiki Message*

--- a/Sosnovoborsk_(Krasnojarskan_rand).mw
+++ b/Sosnovoborsk_(Krasnojarskan_rand).mw
@@ -33,7 +33,7 @@ Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 33 091 ristitud. K
 
 [[Hristanuskond]]an kaks' pühäpertid om olmas lidnas.
 
-Sosnovoborskan mehaniž-tehnologine tehnikum<ref>[ Sosnovoborskan mehaniž-tehnologižen tehnikuman sait ('''').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+Sosnovoborskan mehaniž-tehnologine tehnikum<ref>[http://satehm.ru/ Sosnovoborskan mehaniž-tehnologižen tehnikuman sait (''satehm.ru'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
 
 Edeline lidnan pämez' om Sergei Ponomaröv (2005 — uhoku 2020).
 
