--- a/Ačinsk.mw
+++ b/Ačinsk.mw
@@ -5,15 +5,16 @@
  | Lidnanznam text = Ačinskan lidnanznam
  | Flag text = Ačinskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 105,364
- | Voz' = 2017
+ | Eläjiden lugu = 105,531
+ | Voz' = 2020
  | Pind = 103.21
  | Fail = Ачинск.jpg
- | Pämez' = Ilai Ahmetov<br />(2007—)
+ | Pämez' = Aleksandr Tokarev<br />(viluku 2021—)
  | Telefonkod = +7-39151-xx-xxx
  | Avtokod = 24. 84. 88. 124
  | Aigvö = [[UTC]]+7 (MSK+4)
 }}
+[[Fail:Achinsk Tram System.svg|thumb|left|250px|Tramvain maršrutad lidnan kartal (2017)]]
 '''Ačinsk''' ({{lang-ru|Ачинск}}) om [[Venäma]]n lidn, lidnümbrik i raudtesol'm [[Krasnojarskan rand]]an suvipäivlaskmas. Se om randan koumanz' surtte lidn, om lidnaks randan alištusenke. Mugažo [[Ačinskan rajon]]an administrativine keskuz, ei mülü rajonha.
 
 == Istorii ==
@@ -28,13 +29,26 @@ Lidn sijadase madalan amuižen Arg-mägisel'gan pautkil, [[Čulim (Obin ližajog
 
 Klimat om terav kontinentaline, tal'v om vilu. Voden keskmäine lämuz om +0,8 C°, heinkun — +19,1 C°, vilukun oleleb −15 C°.
 
+Mazul'skii-žilo (1267 rist. vl 2020) mülüb lidnümbrikho Ačinskan ližaks.
+
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 109 155 ristitud. Kaikiš suremb ristitišt oli 120..123 tuhad eläjid vozil 1985−2001.
+
+Edeline lidnan pämez' om Ilai Ahmetov (sulaku 2007 — kezaku 2020).
 
 == Transport ==
 Avtobusad, tramvaid, maršruttaksid da taksid oma kundaližeks transportaks lidnas.
 
 Tatanmaine soda- da civiline Ačinsk-lendimport (''ACS / АЧН'') sijadase 4 km päivnouzmha lidnaspäi, tehtas vaiše päzutajiden eriližid reisid.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Ачинск администрация.JPG|Lidnan administracijan sauvuz (2015)
+Казанская церковь 2-1.jpg|Jumalanmaman Kazanin jumalaižen päjumalanpert', vn 2021 nägu
+Ачинск фонтан.JPG|Keskuzfontan vl 2015
+Ачинск МТТ.JPG|Ačinskan mehaniž-tehnologine tehnikum (2015)
+Achinsk railway station.jpg|Ačinsk 1-päraudtestancijan sauvuz vl 2017
+</gallery>
 
 == Irdkosketused ==
 * [http://www.adm-achinsk.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''adm-achinsk.ru'').] {{ref-ru}}
