--- a/Ačinsk.mw
+++ b/Ačinsk.mw
@@ -32,6 +32,7 @@ Klimat om terav kontinentaline, tal'v om vilu. Voden keskmäine lämuz om +0,8 C
 Mazul'skii-žilo (1267 rist. vl 2020) mülüb lidnümbrikho Ačinskan ližaks.
 
 == Eläjad ==
+[[Fail:Ачинск фонтан.JPG|thumb|right|250px|Keskuzfontan vl 2015]]
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 109 155 ristitud. Kaikiš suremb ristitišt oli 120..123 tuhad eläjid vozil 1985−2001.
 
 Edeline lidnan pämez' om Ilai Ahmetov (sulaku 2007 — kezaku 2020).
@@ -45,7 +46,7 @@ Tatanmaine soda- da civiline Ačinsk-lendimport (''ACS / АЧН'') sijadase 4 km
 <gallery mode="packed" heights="125px">
 Ачинск администрация.JPG|Lidnan administracijan sauvuz (2015)
 Казанская церковь 2-1.jpg|Jumalanmaman Kazanin jumalaižen päjumalanpert', vn 2021 nägu
-Ачинск фонтан.JPG|Keskuzfontan vl 2015
+Чулым АГК.JPG|Ačinskan alüminijan hapandusen kombinat vl 2015<br />(«[[RUSAL]] Ačinsk»)
 Ачинск МТТ.JPG|Ačinskan mehaniž-tehnologine tehnikum (2015)
 Achinsk railway station.jpg|Ačinsk 1-päraudtestancijan sauvuz vl 2017
 </gallery>
