--- a/Ačinsk.mw
+++ b/Ačinsk.mw
@@ -22,7 +22,7 @@ Ezmäižen ''Ačinskan lidnusen'' ({{lang-ru|Ачинский острог}}) al
 
 Vl 1782 anttihe makundan lidnan statusad. Vspäi 1822 oli mülünu udeks pandud Jenisein gubernijha. 19. voz'sadal lidn tegihe tarbhaižeks keskuseks otmaha [[Sibir'|Sibirid]] kävutamižhe.
 
-Ačinskan ižandusen päsarakod oma [[alüminii|alüminijan]] samine sen hapandusespäi i sauvondmaterialiden tehmine ([[cement]]). Vozil 2005−2007 sömtegimišton da kebnan tegimišton sarakod oma muretud.
+Ačinskan ižandusen päsarakod oma [[alüminii|alüminijan]] samine sen hapandusespäi, sauvondmaterialiden tehmine ([[cement]]) alüminijankombinatan jändusiden kävutamiženke, Ačinskan kivivoinümbriradai tegim (torhuden 7,5 mln tonnoid vodes, üks'jäine mugoine randas). Vozil 2005−2007 sömtegimišton da kebnan tegimišton sarakod oma muretud.
 
 == Geografijan andmused ==
 Lidn sijadase madalan amuižen Arg-mägisel'gan pautkil, [[Čulim (Obin ližajogi)|Čulim (Ijus)]]-jogen oiktal randal, 220 m keskmäižel korktusel valdmeren pindan päl. Matkad [[Krasnojarsk]]hasai om 160 km päivnouzmha [[Transsib]]-raudtedme. Lähembaižed lidnad oma [[Nazarovo (Krasnojarskan rand)|Nazarovo]] 30 km suvhe i [[Bogotol]] 60 km päivlaskmha.
