--- a/Ačinsk.mw
+++ b/Ačinsk.mw
@@ -35,6 +35,8 @@ Mazul'skii-žilo (1267 rist. vl 2020) mülüb lidnümbrikho Ačinskan ližaks.
 [[Fail:Ачинск фонтан.JPG|thumb|right|250px|Keskuzfontan vl 2015]]
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 109 155 ristitud. Kaikiš suremb ristitišt oli 120..123 tuhad eläjid vozil 1985−2001.
 
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman Kazanin jumalaižen päjumalanpert' i kaks' časounäd<ref>[http://sobory.ru/geo/locat/24471 Ačinskan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> oma saudud lidnas.
+
 Edeline lidnan pämez' om Ilai Ahmetov (sulaku 2007 — kezaku 2020).
 
 == Transport ==
@@ -50,6 +52,9 @@ Tatanmaine soda- da civiline Ačinsk-lendimport (''ACS / АЧН'') sijadase 4 km
 Ачинск МТТ.JPG|Ačinskan mehaniž-tehnologine tehnikum (2015)
 Achinsk railway station.jpg|Ačinsk 1-päraudtestancijan sauvuz vl 2017
 </gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://www.adm-achinsk.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''adm-achinsk.ru'').] {{ref-ru}}
