--- a/Šaripovo.mw
+++ b/Šaripovo.mw
@@ -1,6 +1,6 @@
 {{Eländpunkt
  | Nimi = Šaripovo<br />Шарыпово
- | Lidnanznam = Coat of arms of Sharypovo.png
+ | Lidnanznam = SHR00-GERB.png
  | Flag = Flag of Sharypovo.svg
  | Lidnanznam text = Šaripovon lidnanznam
  | Flag text = Šaripovon flag
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 37,169
  | Voz' = 2017
  | Pind = 28.97
- | Fail = Hramsharypovo2.jpg
+ | Fail = SHR01-BGRES.jpg
  | Pämez' = Natal'ja Petrovskaja<br />(keväz'ku 2017—)
  | Telefonkod = +7-39153-xx-xxx
  | Avtokod = 24. 84. 88. 124
@@ -17,7 +17,9 @@
 '''Šaripovo''' ({{lang-ru|Шарыпово}}) om [[Venäma]]n lidn da lidnümbrik [[Krasnojarskan rand]]an suvipalan päivlaskmas. Se om [[Šaripovon rajon]]an administrativižeks keskuseks (ei mülü rajonha).
 
 == Istorii ==
-Eländpunktan aluz om pandud 18. voz'sadal kuti ''Šaripovskoje-külä''. Kätihe rajonan keskuseks vl 1941, radnikžiloks vl 1977. Vl 1981 žilo sai lidnan statusad. Vozil 1985−1988 nimitihe sidä ''Černenko:ks''. Šaripovon šingotez om sidotud [[Kanskan da Ačinskan buran hil'bassein]]an otandha kävutamižhe — Berözovskii-kar'jer i Berözovskai GRES.
+Eländpunktan aluz om pandud 18. voz'sadal kuti ''Šaripovskoje-külä''. Kätihe rajonan keskuseks vl 1941, radnikžiloks vl 1977. Vl 1981 žilo sai lidnan statusad. Vozil 1985−1988 nimitihe sidä ''Černenko:ks''.
+
+Šaripovon šingotez om sidotud [[Kanskan da Ačinskan buran hil'bassein]]an otandha kävutamižhe — Berözovskii-kar'jer i Berözovskai GRES.
 
 == Geografijan andmused ==
 Lidn sijadase Kadat-jogen randal ([[Čulim (Obin ližajogi)|Čuliman]] hurapol'ne bassein), 310 m ü.m.t. keskmäižel korktusel, jagase 11 lidnanlaptha. Matkad [[Krasnojarsk]]hasai om 315 km päivlaskmha avtotedme. Lähembaine lidn om [[Užur]] 47 km suvipäivnouzmha orhal vai 75 km avtotedme.
@@ -28,6 +30,15 @@ Kaks' lidnanvuittušt žilod mülüdas lidnümbrikho Šaripovon ližaks: Dubinin
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 38 561 ristitud, lidnankundan — 48 814 ristitud. Kaikiš suremb lidnan ristitišt oli 43 700 eläjad vl 1998.
 
 Professionaližen opendusen aluzkundad: Šaripovon sauvondtehnikum, Tomskan kommunaliž-sauvondtehnikuman filial i Ačinskan saraktehnologijoiden da biznesan kolledžan filial.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Banko de Rusio en Ŝaripovo 01.jpg|[[Venäman keskuzbank]]an lugendkassine keskuz lidnas (2018)
+Hramsharypovo2.jpg|Pühän Stroican päjumalanpert', vn 2013 nägu (om saudud vll 1991−1999)
+Berjozovska centralo 04.jpg|Berözovskai GRES vl 2018
+Кадетский корпус в Шарыпово.jpg|Šaripovon kadetoiden il'mdesantine korpus (2013)
+Restoracio Listvjag (Ŝaripovo) 03.jpg|«Listväg»-kafe (2018)
+</gallery>
 
 == Irdkosketused ==
 * [http://www.gorodsharypovo.ru/ Municipaližen «Šaripovo-lidn»-ühtnikan tobmuden aluzkundoiden oficialine sait (''gorodsharypovo.ru'').] {{ref-ru}}
