--- a/Zaozörnii.mw
+++ b/Zaozörnii.mw
@@ -33,6 +33,15 @@ Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 10 681 ristitud. K
 
 Krasnojarskan juridižen tehnikuman filial om professionaližen opendusen aluzkundaks.
 
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Administration Building in Zaozyorny.JPG|Lidnan administracijan sauvuz (2005)
+Church Memorial Stone in Zaozyornyy (2).jpg|Kivi-muštnik Ioann-jumalantedomehen jumalanpertin panendas mantazole, vn 2009 nägu
+Заозёрный. Элеватор.JPG|Elevator (Villänvaražom) vl 2015
+Новые постройки - panoramio.jpg|Laukad Vagzalan torgul (2014)
+Railway Station Building of Zaozyorny.JPG|Zaozörnai-päraudtestancijan sauvuz vl 2005
+</gallery>
+
 == Irdkosketused ==
 * [http://admzaoz.ru/ Lidnankundan tobmuden aluzkundoiden oficialine sait (''admzaoz.ru'').] {{ref-ru}}
 * [http://www.krskstate.ru/about/kray/mun/0/doc/1424 Lidnan lehtpol' Krasnojarskan randan oficialižel portalal (''krskstate.ru'').] {{ref-ru}}
