*Empty MediaWiki Message*

--- a/Zaozörnii.mw
+++ b/Zaozörnii.mw
@@ -29,7 +29,7 @@ Lidn sijadase Barg-jogen randal ({{lang-ru|Барга}}, [[Jenisei]]n oigedpol'n
 Zaozörnii om lidnankundan üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 10 681 ristitud. Kaikiš suremb ristitišt oli 34 724 ristitud vl 1959.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 10 681 ristitud. Kaikiš suremb ristitišt oli 34 724 ristitud vl 1959, [[Borodino (lidn)|Borodinon]] erištundan jäl'ghe vn 1981 kezal (sil aigal 12 tuhad eläjid) — 15..16 tuhad ristitud vhesai 1996.
 
 Krasnojarskan juridižen tehnikuman filial om professionaližen opendusen aluzkundaks.
 
