--- a/Guahiron_kel'.mw
+++ b/Guahiron_kel'.mw
@@ -1,8 +1,8 @@
 {{Znamoičendad|Guahir}}
-[[Fail:Wayuumap-ru.png|thumb|right|250px|Kelen levigandusen kart.]]
-'''Guahir''' (ičeze nimituz: ''wayuunaiki'') om [[guahir (rahvaz)|guahir-rahvahan]] kel', om üks' [[Suviamerikan indejižed keled|Suviamerikan indejižiš kelišpäi]]. Om [[Sulii]]-štatan (Venesuel) oficialine kel'.
+[[Fail:Wayuumap-ru.png|thumb|right|250px|Kelen levigandusen kart]]
+'''Guahiran kel'''' (ičeze nimituz: ''wayuunaiki'') om [[guahir (rahvaz)|guahir]]-rahvahan kel'. Se om üks' [[suviamerikan indejižed keled|suviamerikan indejižiš kelišpäi]]. Om [[Sulii]]-štatan (Venesuel) oficialine kel'.
 
-Necel kelel pagištas [[Venesuel]]as da [[Kolumbii|Kolumbijas]]; pagižijoiden lugu om läz 325 tuhad ristituid (mamankel').
+Necel kelel pagištas [[Venesuel]]an lodehes i [[Kolumbii|Kolumbijan]] pohjoižpäivnouzmas. Pagižijoiden lugu om läz 325 tuhad ristituid (mamankel').
 
 {{stub}}
 [[Kategorii:Indejižed keled]]
