--- a/Guahiron_kel'.mw
+++ b/Guahiron_kel'.mw
@@ -1,8 +1,10 @@
 {{Znamoičendad|Guahir}}
 [[Fail:Wayuumap-ru.png|thumb|right|250px|Kelen levigandusen kart]]
-'''Guahiran kel'''' (ičeze nimituz: ''wayuunaiki'') om [[guahir (rahvaz)|guahir]]-rahvahan kel'. Se om üks' [[suviamerikan indejižed keled|suviamerikan indejižiš kelišpäi]]. Om [[Sulii]]-štatan (Venesuel) oficialine kel'.
+'''Guahiron kel'''' (ičeze nimituz: ''wayuunaiki'', {{lang-es|Guajiro}}) om [[guahir (rahvaz)|guahiro]]-rahvahan kel'. Se om üks' [[suviamerikan indejižed keled|suviamerikan indejižiš kelišpäi]]. Om [[Sulii]]-štatan (Venesuel) oficialine kel'.
 
-Necel kelel pagištas [[Venesuel]]an lodehes i [[Kolumbii|Kolumbijan]] pohjoižpäivnouzmas. Pagižijoiden lugu om läz 325 tuhad ristituid (mamankel').
+Necil kelel pagištas [[Venesuel]]an lodehes i [[Kolumbii|Kolumbijan]] pohjoižpäivnouzmas, niiden [[Guahiron pol'sar'|Guahiron pol'sarel]]. Pagižijoiden lugu om läz 325 tuhad ristituid (mamankel'), [[aravakan kelel|aravakan kel'kundan]] pol'. Heiden toine kel' om [[ispanijan kel']].
+
+{{Commons|Category:Wayuu language}}
 
 {{stub}}
 [[Kategorii:Indejižed keled]]
