--- a/Guahiron_kel'.mw
+++ b/Guahiron_kel'.mw
@@ -1,8 +1,13 @@
-{{Znamoičendad|Guahir}}
+{{Znamoičendad|Guahiro}}
 [[Fail:Wayuumap-ru.png|thumb|right|250px|Kelen levigandusen kart]]
-'''Guahiron kel'''' (ičeze nimituz: ''wayuunaiki'', {{lang-es|Guajiro}}) om [[guahir (rahvaz)|guahiro]]-rahvahan kel'. Se om üks' [[suviamerikan indejižed keled|suviamerikan indejižiš kelišpäi]]. Om [[Sulii]]-štatan (Venesuel) oficialine kel'.
+'''Guahiron kel'''' (ičeze nimituz: ''wayuunaiki'' «vajuu-kel'», {{lang-es|Guajiro}}) om [[guahiro (rahvaz)|guahiro]]-rahvahan kel'. Se om üks' [[suviamerikan indejižed keled|suviamerikan indejižiš kelišpäi]]. Om [[Sulii]]-štatan (Venesuel) oficialine kel'.
 
 Necil kelel pagištas [[Venesuel]]an lodehes i [[Kolumbii|Kolumbijan]] pohjoižpäivnouzmas, niiden [[Guahiron pol'sar'|Guahiron pol'sarel]]. Pagižijoiden lugu om läz 325 tuhad ristituid (mamankel'), [[aravakan kelel|aravakan kel'kundan]] pol'. Heiden toine kel' om [[ispanijan kel']].
+
+Kirjkel' on sätud [[latinan kirjamišt]]on pohjal.
+
+== Homaičendad ==
+<references />
 
 {{Commons|Category:Wayuu language}}
 
