--- a/Guahiron_kel'.mw
+++ b/Guahiron_kel'.mw
@@ -2,9 +2,9 @@
 [[Fail:Wayuumap-ru.png|thumb|right|250px|Kelen levigandusen kart]]
 '''Guahiron kel'''' (ičeze nimituz: ''wayuunaiki'' «vajuu-kel'», {{lang-es|Guajiro}}) om [[guahiro (rahvaz)|guahiro]]-rahvahan kel'. Se om üks' [[suviamerikan indejižed keled|suviamerikan indejižiš kelišpäi]]. Om [[Sulii]]-štatan (Venesuel) oficialine kel'.
 
-Necil kelel pagištas [[Venesuel]]an lodehes i [[Kolumbii|Kolumbijan]] pohjoižpäivnouzmas, niiden [[Guahiron pol'sar'|Guahiron pol'sarel]]. Pagižijoiden lugu om läz 325 tuhad ristituid (mamankel'), [[aravakan kelel|aravakan kel'kundan]] pol'. Heiden toine kel' om [[ispanijan kel']].
+Necil kelel pagištas [[Venesuel]]an lodehes i [[Kolumbii|Kolumbijan]] pohjoižpäivnouzmas, niiden [[Guahiran pol'sar'|Guahiran pol'sarel]]. Pagižijoiden lugu om läz 325 tuhad ristituid (mamankel'), [[aravakan kelel|aravakan kel'kundan]] pol'. Norišton toine kel' om [[ispanijan kel']]. Om monolingvoid pol'saren pohjoižes i keskuzpalas, hö ei mahtkoi pagišta ispanijaks i ei tekoi kirjamid tobjimalaz.
 
-Kirjkel' on sätud [[latinan kirjamišt]]on pohjal.
+Kirjkel' on sätud [[latinan kirjamišt]]on pohjal. Kelen morfologii om šingotadud, polisintetine kel'. Ei ole adjektivoid, kävutadas statižid verboid niiden sijas. Numeraliden sistem om decimaline.
 
 == Homaičendad ==
 <references />
