--- a/Guahiron_kel'.mw
+++ b/Guahiron_kel'.mw
@@ -2,7 +2,7 @@
 [[Fail:Wayuumap-ru.png|thumb|right|250px|Kelen levigandusen kart]]
 '''Guahiron kel'''' (ičeze nimituz: ''wayuunaiki'' «vajuu-kel'», {{lang-es|Guajiro}}) om [[guahiro (rahvaz)|guahiro]]-rahvahan kel'. Se om üks' [[suviamerikan indejižed keled|suviamerikan indejižiš kelišpäi]], videnz' pagižijoiden mödhe. Om [[Sulii]]-štatan (Venesuel) oficialine kel'.
 
-Necil kelel pagištas [[Venesuel]]an lodehes i [[Kolumbii|Kolumbijan]] pohjoižpäivnouzmas, niiden [[Guahiran pol'sar'|Guahiran pol'sarel]]. Pagižijoiden lugu om 325 tuhad ristituid (1990-nded voded, mamankel'), [[aravakan kelel|aravakan kel'kundan]] pol'. Norišton toine kel' om [[ispanijan kel']]. Om monolingvoid pol'saren pohjoižes i keskuzpalas, hö ei mahtkoi pagišta ispanijaks i ei tekoi kirjamid tobjimalaz.
+Necil kelel pagištas [[Venesuel]]an lodehes i [[Kolumbii|Kolumbijan]] pohjoižpäivnouzmas, niiden [[Guahir (pol'sar')|Guahir]]-pol'sarel. Pagižijoiden lugu om 325 tuhad ristituid (1990-nded voded, mamankel'), [[aravakan kelel|aravakan kel'kundan]] pol'. Norišton toine kel' om [[ispanijan kel']]. Om monolingvoid pol'saren pohjoižes i keskuzpalas, hö ei mahtkoi pagišta ispanijaks i ei tekoi kirjamid tobjimalaz.
 
 Kirjkel' on sätud [[latinan kirjamišt]]on pohjal. Kelen morfologii om šingotadud, polisintetine kel'. Ei ole adjektivoid, kävutadas statižid verboid niiden sijas. Numeraliden sistem om decimaline.
 
