--- a/Energine_arvuz.mw
+++ b/Energine_arvuz.mw
@@ -1,7 +1,8 @@
-'''Energine arvuz''' vai '''kalorižuz''' om energijan lugumär, kudamb tegese ristitun organizmas [[sömproduktad|sömproduktoišpäi]] [[sömänsulatuz|sömänsulatusen]] aigan, ku energii otase kogonaz. Produkatan energišt arvust märitas [[kalorii|kilokalorijoil]] (kkal) vai [[džoul'|kilodžoulil]] (kDž) produktan 100 grammas. Kilokalorijad, kudambad kävutadas sömižen produktoiden energižen arvusen märičendale, kuctas «sömkalorijaks»-ki, sikš «kilo»-sanad paksus tactäs.
+'''Energine arvuz''' vai '''kalorižuz''' om energijan lugumär, kudamb tegese ristitun organizmas [[sömproduktad|sömproduktoišpäi]] [[sömänsulatuz|sömänsulatusen]] aigan, ku energii otase kogonaz.
 
-Produkatn energine arvuz om [[uglevodad|uglevodoiden]], [[razv]]oiden i [[vauktuš]]iden südäiolend siš produktan 100 grammas.
+Märitas produktan energišt arvust [[kalorii|kilokalorijoil]] (kkal) vai [[džoul'|kilodžoulil]] (kDž) produktan 100 grammas. Kilokalorijad, kudambad kävutadas sömižen produktoiden energižen arvusen märičendale, kuctas «sömkalorijaks»-ki, sikš «kilo»-sanad paksus tactäs.
+
+Produktan energine arvuz om [[hil'vezikod|hil'vezikoiden]], [[razv]]oiden i [[vauktuš]]iden südäiolend sen produktan 100 grammas.
 
 {{stub}}
-
 [[Kategorii:Dietologii]]
