--- a/Energine_arvuz.mw
+++ b/Energine_arvuz.mw
@@ -1,8 +1,8 @@
 '''Energine arvuz''' vai '''kalorižuz''' om energijan lugumär, kudamb tegese ristitun organizmas [[sömproduktad|sömproduktoišpäi]] [[sömänsulatuz|sömänsulatusen]] aigan, ku energii otase kogonaz.
 
-Märitas produktan energišt arvust [[kalorii|kilokalorijoil]] (kkal) vai [[džoul'|kilodžoulil]] (kDž) produktan 100 grammas. Kilokalorijad, kudambad kävutadas sömižen produktoiden energižen arvusen märičendale, kuctas «sömkalorijaks»-ki, sikš «kilo»-sanad paksus tactäs.
+Märitas produktan energišt arvust [[kalorii|kilokalorijoil]] (kkal) vai [[džoul'|kilodžoulil]] (kDž, 1 kkal = 4,1868 kDž) produktan 100 grammas, sen täht polttas sömän palliškod [[kalorimetr]]as. Kilokalorijad, kudambad kävutadas sömižen produktoiden energižen arvusen märičendale, kuctas «sömkalorijaks»-ki, sikš «kilo»-sanad tactäs paksus.
 
-Produktan energine arvuz om [[hil'vezikod|hil'vezikoiden]], [[razv]]oiden i [[vauktuš]]iden südäiolend sen produktan 100 grammas.
+Produktan energine arvuz ozutase sen pakuitesel. [[Hil'vezikod|hil'vezikoiden]], [[razv]]oiden i [[vauktuš]]iden südäiolend kirjutase grammoiš sen produktan 100 grammas, jomiden — sadas millilitras.
 
 {{stub}}
 [[Kategorii:Dietologii]]
