--- a/Energine_arvuz.mw
+++ b/Energine_arvuz.mw
@@ -4,5 +4,7 @@ Märitas produktan energišt arvust [[kalorii|kilokalorijoil]] (kkal) vai [[džo
 
 Produktan energine arvuz ozutase sen pakuitesel. [[Hil'vezikod|hil'vezikoiden]], [[razv]]oiden i [[vauktuš]]iden südäiolend kirjutase grammoiš sen produktan 100 grammas, jomiden — sadas millilitras.
 
+Amerikaine [[Uilbur Etuoter]]-himik da [[metabolizm]]an tedomez' märiči sömän energižen arvusen znamoičendoid ezmäižen kerdan 1870-nzil vozil. Energijan jogapäiväline tarbhaižuz vajehtase 2100..4200 kkal röunoiš mehil i 1800..3050 kkal naižil, se rippub hibjan suruzišpäi i elonmahtospäi.
+
 {{stub}}
 [[Kategorii:Dietologii]]
