--- a/Honkong.mw
+++ b/Honkong.mw
@@ -23,25 +23,25 @@ Vozil 1841−1997 Honkong nügüdläižiš röunoiš oli [[Sur' Britanii|Suren B
 Honkongal om ičeohjanduz. Ičeze päkäskuz, Käskusenandai Nevondkund, ohjastuz ministrusidenke oma Honkongas. Vn 1984 kožundkirjutesen mödhe, [[Sur' Britanii]] andoi ottud kortomha territorijad [[Kitai]]le znamoičendanke jätta territorijan käskusištod da ohjandusen formad vajehtuseta 50 vodeks.
 
 == Geografijan andmused ==
-[[Fail:Hk-map.png|thumb|left|250px|Honkongan territorijan kart.]]
-Honkong sijadase [[Kitai]]n suvipalas, Koulunan pol'sarel, kahtil suril saril (Honkong da Lantau) da völ 260 pen't sart, [[Kitain Suvimeri|Kitain Suvimeren]] randal. Lidnaspäi pohjoižpolehe om [[Šen'čžen']] (ani röunan taga 33 km pitte), päivlaskmpolehe 60 kilometras om toine Kitain specialine administrativine agj — [[Makao]].
+[[Fail:Hk-map.png|thumb|left|250px|Honkongan territorijan kart]]
+Honkong sijadase [[Kitai]]n suvipalas, Koulunan pol'sarel, kahtel surel sarel (Honkong i Lantau) da völ 260 pen't sart, [[Kitain Suvimeri|Kitain Suvimeren]] randal. Lidnaspäi pohjoižpolehe om [[Šen'čžen']] (ani röunan taga 33 km pitte), päivlaskmpolehe 60 kilometras om toine Kitain specialine administrativine agj — [[Makao]].
 
-Randanpird — 733 km<ref>[https://www.cia.gov/library/publications/the-world-factbook/geos/hk.html Andmused Honkongas vl 2014 heinkul Mail'man faktoiden kirjaspäi. — ''Cia.gov''.] {{ref-en}}</ref>. Kaikiš korktemb čokkoim om [[Taimošan']]-mägi, 958 m.
+Randanpird — 733 km<ref>[https://www.cia.gov/library/publications/the-world-factbook/geos/hk.html Andmused Honkongas vn 2014 heinkul Mail'man faktoiden kirjaspäi. — ''Cia.gov''.] {{ref-en}}</ref>. Kaikiš korktemb čokkoim om [[Taimošan']]-mägi, 958 m ü.m.t..
 
-Klimat om [[subekvatorialine vö|subekvatorialine]] mussonine. Vihmsezonan aigan voib panda 500 mm sadegid kus. Ei oleskele manrehkaidusid.
+Klimat om [[subekvatorialine vö|subekvatorialine]] mussonine. Vihmsezonan aigan voib panda 500 mm sadegid kus. Ei oleskele manrehkaidusid, toroksäd oma paksud.
 
 Lidnfartaloiden territorii otab penemb nelländest kaikes territorijaspäi, toižed agjan koume nelländest oma puištod.
 
 == Administrativine jagand ==
-Kaik om 18 administrativišt ümbrikod (angl. ''district'') Honkongas. Käskusištos ''de facto'' om severz'-se erižid lidnoid da žiloid, no niil eile administrativišt statusad i valdatusid, ned oma erazvuiččiden ümbrikoiden palad.
+Kaik om 18 administrativišt ümbrikod ({{lang-en|district}}) Honkongas. Käskusištos ''de facto'' om severz'-se erižid lidnoid da žiloid, no niil eile administrativišt statusad i valdatusid, ned oma erazvuiččiden ümbrikoiden palad.
 
 == Transport ==
-Kundaline transport mülütab nenid tipid: metropoliten (MTR), elektrojonused (KCR), kaks'žiruižed [[tramvai|tramvajad]], irdaližed [[eskalator]]ad, [[ehtatim]]ed.
+Kundaline transport mülütab nenid toižendoid: metropoliten (MTR), elektrojonused (KCR), kaks'žiruižed [[tramvai]]d, irdaližed [[eskalator]]ad, [[ehtatim]]ed.
 
 Jügu- da rahvahidenkeskeine lendimport om Čheklapkok (''HKG''), sijadase 14 km lidnan keskusespäi (Keskuzraudtestancijaspäi).
 
 == Lidnan nägud ==
-[[Fail:Hong Kong Skyline Panorama -_Dec_2008.jpg|thumb|center|1000px|<center>Honkongan ühthine nägu.</center>]]
+[[Fail:Hong Kong Skyline Panorama -_Dec_2008.jpg|thumb|center|1000px|<center>Honkongan ühthine nägu (2008)</center>]]
 
 == Homaičendad ==
 <references />
