/* Totaran kelen kirjamištod */

--- a/Totaran_kel'.mw
+++ b/Totaran_kel'.mw
@@ -78,7 +78,7 @@ Kaikutte pagin jagase henombihe alapaginoiden gruppihe.
 | style="width:3em; text-align:center; padding: 3px;" | L l
 | style="width:3em; text-align:center; padding: 3px;" | M m
 | style="width:3em; text-align:center; padding: 3px;" | N n
-| style="width:3em; text-align:center; padding: 3px;" | [[Ꞑ|Ꞑ ꞑ]]
+| style="width:3em; text-align:center; padding: 3px;" | Ꞑ ꞑ
 | style="width:3em; text-align:center; padding: 3px;" | O o
 | style="width:3em; text-align:center; padding: 3px;" | Ɵ ɵ
 | style="width:3em; text-align:center; padding: 3px;" | P p
