--- a/Tegimištpäčid.mw
+++ b/Tegimištpäčid.mw
@@ -1,4 +1,9 @@
-'''Tegimištpäčiden''' toižendad oleskeldas:
+'''Tegimištpäčid''' kävutasoiš [[tegimišt]]os ümbriradamha erazvuiččid materialoid enamba mi 400 Cel'sijan gradusad lämudel tobjimalaz. Voidas vedada lämut objektale vai olda lämuzreaktoran.
+
+Ottas kävutamižhe surid päčid instrumentaks ižandusen sarakoiš, oz., himižiden reakcijoiden täht, murdoiden [[piroliz]] vai poltatez, kivivoinümbriradmine, stökoltegimišt, metallurgii.
+
+== Toižendad ==
+Tegimištpäčid oma erazvuiččed funkcijan, lämbitusen tarbhaižusen, poltusen, il'man andandan mödhe (päiči elektrižes) da tž.. Niiden toižendad oleskeldas:
 ;Konstrukcijan mödhe:
 * [[Čuhunduzpäč]]
 * [[Kamerpäč]]
