--- a/Munarič.mw
+++ b/Munarič.mw
@@ -1,7 +1,9 @@
 [[Fail:Flickr - cyclonebill - Vagtel-spejlæg.jpg|thumb|right|250px|Sil'mmunarič]]
-'''Munarič''' om sömine, kudambad tehtas [[rehtil'|rehtiläl]] muretud [[muna|munišpäi]]. Räkištadas segoitadud pakušanke vai segoitandata.
+'''Munarič''' om sömine, kudambad tehtas [[rehtil'|rehtiläl]] muretud [[muna|munišpäi]], kanamunišpäi päpaloin. Räkištadas segoitadud pakušanke (se om [[omlet]] maidon ližadusenke) vai segoitandata (sil'mmunarič) pühävoil vai toižel razval solan ližadusenke.
 
-Vaumitadas blödad ližadusidenke-ki. Munarič [[bekon]]anke om veroline murgin Sures Britanijas i Irlandijas. Ispanine «uevos»-munarič (''huevos'') voib anttas [[läpušk]]an päl. Recept čaptud [[tomat]]oidenke om levitadud.
+Vaumitadas blödad ližadusidenke-ki. Recept čaptud [[tomat]]oidenke om levitadud. Ližadused i ližablödad oleldas kova sagud, bekon, kolbas, räkištadud liha, sened, lauk, haudutadud maplodud i äi tošt erazvuiččiš toižendoiš.
+
+Munarič [[bekon]]anke om veroline murgin Sures Britanijas i Irlandijas. Ispanine «uevos»-munarič (''huevos'') voib anttas [[läpušk]]an päl.
 
 {{Commons|Category:Fried eggs}}
 
