*Empty MediaWiki Message*

--- a/Munarič.mw
+++ b/Munarič.mw
@@ -1,5 +1,5 @@
 [[Fail:Flickr - cyclonebill - Vagtel-spejlæg.jpg|thumb|right|250px|Sil'mmunarič]]
-'''Munarič''' om sömine, kudambad tehtas [[rehtil'|rehtiläl]] muretud [[muna|munišpäi]], kanamunišpäi päpaloin. Räkištadas segoitadud pakušanke (se om [[omlet]] maidon ližadusenke) vai segoitandata (sil'mmunarič) pühävoil vai toižel razval solan ližadusenke.
+'''Munarič''' om sömine, tehtas sidä [[rehtil'|rehtiläl]] muretud [[muna|munišpäi]] koreta, kanamunišpäi päpaloin. Räkištadas segoitadud pakušanke (se om [[omlet]] maidon ližadusenke) vai segoitandata (sil'mmunarič) pühävoil vai toižel razval solan ližadusenke.
 
 Vaumitadas blödad ližadusidenke-ki. Recept čaptud [[tomat]]oidenke om levitadud. Ližadused i ližablödad oleldas kova sagud, bekon, kolbas, räkištadud liha, sened, lauk, haudutadud maplodud i äi tošt erazvuiččiš toižendoiš.
 
