--- a/Munarič.mw
+++ b/Munarič.mw
@@ -3,7 +3,7 @@
 
 Vaumitadas blödad ližadusidenke-ki. Recept čaptud [[tomat]]oidenke om levitadud. Ližadused i ližablödad oleldas kova sagud, bekon, kolbas, räkištadud liha, sened, lauk, haudutadud maplodud i äi tošt erazvuiččiš toižendoiš.
 
-Italine [[frittat]] vaimičese erazvuiččiš ingredijentoišpäi. Munarič [[bekon]]anke om veroline murgin Sures Britanijas i Irlandijas. Ispanine «uevos»-munarič (''huevos'') voib anttas [[läpušk]]an päl. [[Ispanine tortil'j]] om munarič kartohkanke. Slokosttäs omletoid rissüdämenke Japonijas i Indonezijas.
+Italine [[frittat]] vaumičese vitkol lämoil erazvuiččiš ingredijentoišpäi, muniden ližaks se om kartohk, lauk, parmezan-sagud, erasti liha. Munarič [[bekon]]anke om veroline murgin Sures Britanijas i Irlandijas. Ispanine «uevos»-munarič (''huevos'') voib anttas [[läpušk]]an päl. [[Ispanine tortil'j]] om munarič kartohkanke. Slokosttäs omletoid rissüdämenke Japonijas i Indonezijas.
 
 Kaikiš surembad (rekordižed) slokosttüd munaričud tarbhaižiba sadad tuhoid munid i rehtiläd kümnehe metrhasai surtte, märitihe niiden vedust tonnoikš. Blöd kulutase veresas i hulas olendas.
 
