--- a/Käpaz_(futbolklub).mw
+++ b/Käpaz_(futbolklub).mw
@@ -2,10 +2,10 @@
 
 Pätrener om azerbaidžanlaine Jašar Vahabzade vspäi 2019. Kodiaren om [[Gändž (stadion)|Gändž-lidnanstadion]].
 
-Klub om valdkundan koumekerdaine čempion. Ezineb [[Azerbaidžanan Prem'jer-lig]]as.
+Klub om valdkundan koumekerdaine čempion. Ezineb [[Azerbaidžanan Prem'jer-lig]]as. Azerbaižanan futbolkupkan nell'kerdaine pidai (sezonad 1993/94, 1996/97, 1997/98, 1999/2000).
 
 == Istorii ==
-Kluban istorii augotihe vl 1959 «Tekstil'ščik»-nimitusenke, Gändž oli Kirovabad:aks. Toižed nimed oliba «Dinamo», «Tereggi» ({{lang-az|Tərəqqi}} «progress») i «Tohudžu» (azerb. ''Toxucu'' «kudojad»). Vl 1989 futboljouk sai nügüdläšt nimitust Gändžan mägen mödhe. Vll 2005−2011 kluban nimi oli «Gändž».
+Kluban istorii augotihe vl 1959 «Tekstil'ščik»-nimitusenke, Gändž oli Kirovabad:aks. Toižed nimed oliba «Dinamo», «Tereggi» ({{lang-az|Tərəqqi}} «progress») i «Tohudžu» (azerb. ''Toxucu'' «kudojad»). Vl 1989 futboljouk sai nügüdläšt nimitust Gändžan Käpaz-mägen mödhe. Vll 2005−2011 kluban nimi oli «Gändž».
 
 == Irdkosketused ==
 * [http://www.facebook.com/Kepez-Pesekar-Futbol-Klubu-135861716510368/ Käpaz-futbolkluban lehtpoled ''facebook.com''-saital.] {{ref-az}}
