--- a/Mirkovič_Dragana.mw
+++ b/Mirkovič_Dragana.mw
@@ -7,7 +7,7 @@
 == Biografii ==
 Dragana om sündnu Kasidol-külähä.
 
-Vspäi 1999 om lähtnu mehele, Toni Bijenič om hänen mužik. Heil om üks' tütär da üks' poig: Manuela da Marko.
+Vspäi 1999 om lähtnu mehele, avstrine Toni Bijelič-biznesmen om hänen mužik. Heil om üks' tütär da üks' poig: Manuela da Marko.
 
 == Diskografii ==
 * 1984 — Imam dečka nemirnog
@@ -30,6 +30,7 @@ Vspäi 1999 om lähtnu mehele, Toni Bijenič om hänen mužik. Heil om üks' tü
 * 2006 — Luče moje
 * 2008 — Eksplozija
 * 2012 — 20
+* 2017 — Од милион један
 
 == Homaičendad ==
 <references />
