--- a/Krasnojarsk.mw
+++ b/Krasnojarsk.mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Krasnojarskan lidnanznam
  | Flag text = Krasnojarskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 1,082,933
- | Voz' = 2017
+ | Eläjiden lugu = 1,092,851
+ | Voz' = 2021
  | Pind = 353.9
  | Fail = Krsnrsk.jpg
  | Pämez' = Sergei Jerömin<br />(reduku 2017—)
@@ -31,10 +31,24 @@ Nügüdläižen, kaikenaigaižen eländpunktan aluz om pandud [[kozakišt|kozako
 == Geografijan andmused ==
 Lidn sijadase kesked mecoid, [[Jenisei]]-jogen molembil randoil, 287 m ü.m.t. keskmäižel korktusel. Matkad [[Moskv]]hasai om 3350 km päivlaskmha orhal vai 4170 km avtotedme. [[Divnogorsk]] (20 km päivlaskmha orhal) da [[Sosnovoborsk (Krasnojarskan rand)|Sosnovoborsk]] (15 km päivnouzmha orhal) oma kaimdailidnoikš.
 
-Krasnojarsk jagase seičemehe lidnrajonha. Pesčank-külä (861 rist. vl 2017) mülüb lidnümbrikho Krasnojarskan ližaks. Lidnümbrikon pind — 379,49 km².
+Krasnojarsk jagase seičemeks lidnrajonaks. Pesčank-külä (861 rist. vl 2017) mülüb lidnümbrikho Krasnojarskan ližaks. Lidnümbrikon pind — 379,49 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 973 826 ristitud, lidnankundan — 974 591 ristitud. Millionine eläi om sundnu vn 2012 10. päiväl sulakud. Kaikiš suremb lidnan ristitišt om nügüd'. Laz pol'tošt millionad ristituid eläb lidnaglomeracijas.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 973 826 ristitud, lidnankundan — 974 591 ristitud. Millionine eläi om sundnu vn 2012 10. päiväl sulakud. Kaikiš suremb lidnan ristitišt oli 1 095 286 eläjad vl 2019. Laz pol'tošt millionad ristituid eläb lidnaglomeracijas.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Красноярская администрация 2020-08-16 20-37-59 ShiftN.jpg|Lidnan administracijan sauvuz (2020)
+Church of the Intercession of the Theotokos in Krasnoyarsk.jpg|Pühän Jumalanmaman Katken kafedraline päjumalanpert' (ortodoksine hristanuskond), vn 2020 nägu
+Krasnoyarsk Evangelical Christians-Baptists church.jpg|«Blagodat'»-loičendpert' (baptizm), vn 2015 nägu
+2020-08-18 07-52-54 ShiftN Красноярский Алюминевый завод (cropped).jpg|Krasnojarskan alüminijantegim vl 2020
+Krasnoyarsk Machine-Building Plant entrance.jpg|Krasnojarskan mašinansauvomižtegimen pätulend vl 2018
+Siberian Federal University (site 4), Krasnoyarsk.JPG|Sibirin federaline universitet, sauvuz 4 (2011)
+International exhibition and business center "Siberia", Krasnoyarsk.jpg|Rahvahidenkeskeine ozutelendoiden da azjaline «Sibir'»-keskuz (2018)
+Crystal Arena, Krasnoyarsk.jpg|Jäine «Kristall Arena» (2019)
+Krs railstation.jpg|Krasnojarsk-Passažirskii-päraudtestancijan sauvuz (2009. voz' vai sen aigemba)
+Аэропорт Красноярск, вид с перрона (2018.08).jpg|Krasnojarsk-lendimportan passažirterminal, nägu perronaspäi vl 2018
+</gallery>
 
 == Homaičendad ==
 <references />
