--- a/Krasnojarsk.mw
+++ b/Krasnojarsk.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 1,092,851
  | Voz' = 2021
  | Pind = 353.9
- | Fail = Krsnrsk.jpg
+ | Fail = View of Krasnoyarsk from Observation deck at Karaulnaya Mountain 4Y1A8901 (27789594613).jpg
  | Pämez' = Sergei Jerömin<br />(reduku 2017—)
  | Telefonkod = +7-391-xxx-xxxx
  | Avtokod = 24. 84. 88. 124
