palah'ne känduz

--- a/Mirkovič_Dragana.mw
+++ b/Mirkovič_Dragana.mw
@@ -10,27 +10,27 @@ Dragana om sündnu Kasidol-külähä.
 Vspäi 1999 om lähtnu mehele, avstrine Toni Bijelič-biznesmen om hänen mužik. Heil om üks' tütär da üks' poig: Manuela da Marko.
 
 == Diskografii ==
-* 1984 — Imam dečka nemirnog
-* 1985 — Umiljato oko moje
-* 1986 — Spasi me samoće
-* 1987 — Ruže cvetaju samo u pesmama
-* 1988 — Najlepši par
-* 1989 — Simpatija
-* 1990 — Pomisli želju
-* 1991 — Dobra devojka
-* 1992 — Dolaze nam bolji dani
-* 1993 — Do poslednjeg daha
-* 1994 — Nije tebi do mene
-* 1995 — Plači zemljo
-* 1996 — Nema promene
-* 1997 — Kojom gorom
-* 1999 — U godini
-* 2000 — Sama
-* 2004 — Trag u vremenu
-* 2006 — Luče moje
-* 2008 — Eksplozija
-* 2012 — 20
-* 2017 — Од милион један
+* 1984 — Имам дечка немирног / Imam dečka nemirnog (''Minai mel'heine om lebuta'')
+* 1985 — Умиљато око моје / Umiljato oko moje (''Minun sula sil'm'')
+* 1986 — Спаси ме самоће / Spasi me samoće (''Päzuta mindai elospäi üksnäin'')
+* 1987 — Руже цветају само у песмама / Ruže cvetaju samo u pesmama (''Rozad änikoitas vaiše pajoiš'')
+* 1988 — Најлепши пар / Najlepši par (''Parahim par'')
+* 1989 — Симпатија / Simpatija (''Simpatii'')
+* 1990 — Помисли жељу / Pomisli želju (''Ota mel'he tahton'')
+* 1991 — Добра девојка / Dobra devojka
+* 1992 — Долазе нам бољи дани / Dolaze nam bolji dani
+* 1993 — No. 10 (До последњег даха / Do poslednjeg daha)
+* 1994 — Није теби до мене / Nije tebi do mene
+* 1995 — Плачи земљо / Plači zemljo
+* 1996 — Нема промене / Nema promene
+* 1997 — Којом гором / Kojom gorom (''Mitte mägi'')
+* 1999 — 15 (У години / U godini, ''Vodel'')
+* 2000 — 16 (Сама / Sama, ''Üksnäin'')
+* 2004 — Траг у времену / Trag u vremenu (''Jäl'g aigas'')
+* 2006 — Луче моје / Luče moje (''Minun sula'')
+* 2008 — Експлозија / Eksplozija (''Poukahtuz'')
+* 2012 — 20 (Љубави / Ljubavi) (''Armastuz'')
+* 2017 — Од милион један / Od milion jedan (''Üks' millionaspäi'')
 
 == Homaičendad ==
 <references />
