--- a/Munarič.mw
+++ b/Munarič.mw
@@ -1,7 +1,7 @@
 [[Fail:Flickr - cyclonebill - Vagtel-spejlæg.jpg|thumb|right|250px|Sil'mmunarič]]
 '''Munarič''' om sömine, tehtas sidä [[rehtil'|rehtiläl]] muretud [[muna|munišpäi]] koreta, kanamunišpäi päpaloin. Räkištadas segoitadud pakušanke (se om [[omlet]] maidon ližadusenke) vai segoitandata (sil'mmunarič) pühävoil vai toižel razval solan ližadusenke.
 
-Vaumitadas blödad ližadusidenke-ki. Recept čaptud [[tomat]]oidenke om levitadud. Ližadused i ližablödad oleldas kova sagud, bekon, kolbas, räkištadud liha, sened, lauk, haudutadud maplodud i äi tošt erazvuiččiš toižendoiš.
+Vaumitadas blödad ližadusidenke-ki. Recept čaptud [[tomat]]oidenke om levitadud. Ližadused i ližablödad oleldas kova sagud, bekon, kolbas, räkištadud liha, sened, lauk, haudutadud maplodud i äi tošt erazvuiččiš ühtnendoiš da variantoiš.
 
 Italine [[frittat]] vaumičese vitkol lämoil erazvuiččiš ingredijentoišpäi, muniden ližaks se om kartohk, lauk, parmezan-sagud, erasti liha. Munarič [[bekon]]anke om veroline murgin Sures Britanijas i Irlandijas. Ispanine «uevos»-munarič (''huevos'') voib anttas [[läpušk]]an päl. [[Ispanine tortil'j]] om munarič kartohkanke. Slokosttäs omletoid rissüdämenke Japonijas i Indonezijas.
 
