--- a/Vägestusen_päiv.mw
+++ b/Vägestusen_päiv.mw
@@ -1,11 +1,22 @@
-[[Fail:Victory Day Parade 2005-18.jpg|thumbnail|right|250px|Praznikparadal [[Moskv]]as vl 2005.]]
-'''Vägestusen päiv''' ({{lang-ru|День Победы}}) om [[Venäma]]n valdkundpraznik, om sen ühteks päpraznikoišpäi. Se oigendase [[9. semendku|semendkun 9. päiväl]].
+[[Fail:Victory Day Parade 2005-18.jpg|thumbnail|right|250px|Praznikparadal [[Moskv]]as vl 2005]]
+'''Vägestusen päiv''' ({{lang-ru|День Победы}}) om [[Venäma]]n da enččen [[Nevondkundaline Ühtištuz|NSTÜ]] erasiden toižiden valdkundoiden praznik, om Venäman ühteks päpraznikoišpäi. Se oigendase [[9. semendku|semendkun 9. päiväl]], lebupäiv Venämas.
 
-Edeližel päiväl (8. semendku, sijaližel aigal) vodes 1945 om allekirjutadud [[Akt Fašistižen Germanijan kapituläcijas]].
+Edeližel päiväl (8. semendku, sijaližel aigal) vodes 1945 [[Akt Fašistižen Germanijan kapituläcijas]] om allekirjutadud. Oigetas praznikad [[Rusked Armii|Rusttan Armijan]] i nevondkundaližen rahvahan vägestusen muštoks voziden 1941−1945 [[Sur' Tatanmaine soda|Sures sodas]]. Praznik om pandud NSTÜ:n Ülembaižen Nevondkundan Prezidiuman käsköl vn 1945 8. päiväl semendkud i oigendase 9. semendkud joga vodel. NSTÜ:s se oli lebupäiv vll 1945−1947 i vspäi 1965.
+
+Praznikpäiväl vedadas sodaparadoid i praznikambuškelendoid (salütoid) Venäman äjiš suriš lidnoiš.
 
 {{Commons|Category:9 May Victory Day}}
 
 {{stub}}
+[[Kategorii:NSTÜ:n praznikad]]
 [[Kategorii:Venäman praznikad]]
+[[Kategorii:Armenijan praznikad]]
+[[Kategorii:Azerbaižanan praznikad]]
+[[Kategorii:Kazahstanan praznikad]]
+[[Kategorii:Kirgizstanan praznikad]]
+[[Kategorii:Tadžikistanan praznikad]]
+[[Kategorii:Turkmenistanan praznikad]]
+[[Kategorii:Uzbekistanan praznikad]]
+[[Kategorii:Vaugedvenäman praznikad]]
 [[Kategorii:Praznikad kirjamišton mödhe]]
 [[Kategorii:9. semendku]]
