--- a/Murino_(Oktäbrin_raudten_platform).mw
+++ b/Murino_(Oktäbrin_raudten_platform).mw
@@ -1,6 +1,10 @@
 {{Znamoičendad|Murino (znamoičendad)}}
 [[Fail:Платформа Мурино юг.jpg|thumb|right|250px|Murino-platform vn 2018 heinkus.]]
-'''Murino''' ({{lang-ru|Мурино}}) om [[Oktäbrin raudte]]n [[«Piter — Hiitola»-raudte|Priozerskan čuradusen]] platform [[Piter]]in pohjoižpäivnouzmas. Om avaitud vl 1971. Sijadase 1 km suvhe [[Murino|ühtennimižes lidnaspäi]], [[Rengazavtote ümbri Piteriš|Rengazavtoten]] ümbrusen südäimes.
+'''Murino''' ({{lang-ru|Мурино}}) om [[Oktäbrin raudte]]n [[«Piter — Hiitola»-raudte|Priozerskan čuradusen]] seižutezpunkt passažiroiden täht [[Piter]]-lidnan pohjoižpäivnouzmas, pidust' [[Rustavelin ird (Piter)|Rustavelin irdad]] [[Vauktustusen prospekt (Piter)|Vauktustusen prospektan]] čogas.
+
+Seižutezpunkt om avaitud vl 1971. Sijadase [[Ručji (stancii, Piter)|Ručji]]-raudtestancijan röunoiš (kuti Depo-seižutezpunkt-ki), 1 km suvhe [[Murino]]-lidnaspäi, [[Rengazavtote ümbri Piteriš|Rengazavtoten]] ümbrusen südäimes. Raudtekeskust om elektrificiruidud vl 1958.
+
+Kaik om kaks' oiktad platformad Murino-seižutezpunktas. Läz kaik ezilidnelektrojonused tehtas seižutest niidenno, lähttas da tuldas ajaden [[Suomenman päraudtestancii (Piter)|Suomenman päraudtestancijha]].
 
 {{Commons|Category:Murino railway station}}
 
